--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,141 @@
-body{overflow-x:hidden}body .overall-padding{padding:20px 20px 40px 20px}body .overall-restaurant-pres-margin{margin:10px 20px 20px 20px}body .mrg-top-none{margin-top:0}body p{font-family:"Roboto"}body .text-medium{font-weight:700}body a.link-black{color:#000}body a.no-decoration{text-decoration:none}body .bg-light{background-color:#eaeaea}body .bg-light-alt{background-color:#f6f6f6}body .overall-section-titles{font-family:"Roboto";font-weight:700;font-size:25px}body .card{background-color:#fff;border-radius:20px;box-shadow:5px 11px 15px 5px rgba(0,0,0,.09)}body .card-title{margin-bottom:0;font-family:"Roboto"}body .action-button-container{margin-bottom:40px;text-align:center}body .action-button-container-a{width:250px;margin:auto;display:block;padding:20px 0 20px 0;margin-bottom:30px;background:#9356dc;background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 100%);box-shadow:5px 5px 15px 5px rgba(0,0,0,.25);border-radius:40px;font-family:"Roboto";font-weight:700;color:#fff;cursor:pointer}body .action-button-container-a:hover{cursor:pointer;background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 80%);box-shadow:5px 5px 15px 5px rgba(0,0,0,.35)}@keyframes heartAnimation{0%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 0%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}10%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 10%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}20%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 20%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}30%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 30%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}40%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 40%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}50%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 50%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}60%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 60%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}70%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 70%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}80%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 80%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}90%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 90%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}100%{background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 100%);-webkit-background-clip:text;-webkit-text-fill-color:rgba(0,0,0,0)}}body .fa-heart:hover{font-weight:700;cursor:pointer;animation:heartAnimation .5s forwards}/*# sourceMappingURL=main.css.map */
+body {
+  overflow-x: hidden;
+  /** Text rules */
+  /** Backgrounds helpers */
+  /** Pages sections titles */
+  /** Cards general rules **/
+  /* """ Actions buttons */
+  /* Heart icons buttons */
+}
+body .overall-padding {
+  padding: 20px 20px 40px 20px;
+}
+body .overall-restaurant-pres-margin {
+  margin: 10px 20px 20px 20px;
+}
+body .mrg-top-none {
+  margin-top: 0;
+}
+body .d-flex {
+  display: flex;
+}
+body p {
+  font-family: "Roboto";
+}
+body .text-medium {
+  font-weight: 700;
+}
+body a.link-black {
+  color: black;
+}
+body a.no-decoration {
+  text-decoration: none;
+}
+body .bg-light {
+  background-color: #EAEAEA;
+}
+body .bg-light-alt {
+  background-color: #F6F6F6;
+}
+body .overall-section-titles {
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 25px;
+}
+body .card {
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 5px 11px 15px 5px rgba(0, 0, 0, 0.09);
+}
+body .card-title {
+  margin-bottom: 0;
+  font-family: "Roboto";
+}
+body .action-button-container {
+  margin-bottom: 40px;
+  text-align: center;
+}
+body .action-button-container-a {
+  width: 250px;
+  margin: auto;
+  display: block;
+  padding: 20px 0 20px 0;
+  margin-bottom: 30px;
+  background: rgb(147, 86, 220);
+  background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 100%);
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 40px;
+  font-family: "Roboto";
+  font-weight: 700;
+  color: #FFF;
+  cursor: pointer;
+}
+body .action-button-container-a:hover {
+  cursor: pointer;
+  background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 80%);
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.35);
+}
+@keyframes heartAnimation {
+  0% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 0%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  10% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 10%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  20% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 20%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  30% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 30%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  40% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 40%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  50% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  60% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 60%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  70% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  80% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 80%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  90% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  100% {
+    background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+body .fa-heart:hover {
+  font-weight: 700;
+  cursor: pointer;
+  animation: heartAnimation 0.5s forwards;
+}
+
+/*# sourceMappingURL=main.css.map */
