--- a/sass/main.sass
+++ b/sass/main.sass
@@ -32,6 +32,9 @@ body
   .bg-light-alt
     background-color: #F6F6F6
 
+   .opacity-0
+     opacity: 0
+
   /** Pages sections titles */
   .overall-section-titles
     font-family: $content_font
