--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -23,6 +23,14 @@
   to
     transform: rotate(0deg)
 
+@keyframes slideup
+  from
+    opacity: 0
+    transform: translatey(-30px)
+  to
+    opacity: 1
+    transform: translatey(0px)
+
 section.menu
   width: 100%
 
@@ -75,6 +83,15 @@ section.menu
     margin: 30px 20px 30px 20px
     padding: 5px
     font-family: $content-font
+    animation: slideup 0.25s forwards
+    opacity: 0
+    &:nth-of-type(1)
+      animation-delay: 0.25s
+    &:nth-of-type(2)
+      animation-delay: 0.5s
+    &:nth-of-type(3)
+      animation-delay: 0.75s
+
     &__title
       display: flex
       flex-direction: column
