--- a/sass/features.sass
+++ b/sass/features.sass
@@ -1,5 +1,5 @@
 /** """ Features """ section */
-@import '__overall.scss'
+@import 'overall.scss'
 
 /** These rules are shared by mobile, tablets & desktop */
 .features .item
@@ -15,7 +15,7 @@
   position: absolute
   width: 35px
   height: 25px
-  margin: 10px -60px
+  margin: 10px -70px
   padding-top: 10px
   border-radius: 35px
   background-color: $feat_circle_bg
