--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -3,7 +3,7 @@
  * Overall footer
  *
  */
-@import '__overall.scss'
+@import 'overall.scss'
 footer
   padding: 15px 0 15px 15px
   background-color: #353535
