--- a/sass/header.sass
+++ b/sass/header.sass
@@ -3,7 +3,7 @@
  * Overall header
  *
  */
-@import '__overall.scss'
+@import 'overall.scss'
 
 /* Pages header first target mobile, see the media query below */
 header
