--- a/sass/overall.scss
+++ b/sass/overall.scss
@@ -1,6 +1,6 @@
-$overall_padding: 20px 20px 40px 20px;
+$overall_xs_padding: 20px 40px 50px 40px;
+$overall_sm_padding: 20px 30px 50px 30px;
 $overall_margin: 10px 20px 20px 20px;
-
 
 $project_font: 'Shrikhand';
 $content_font: 'Roboto';
