--- a/css/features.css
+++ b/css/features.css
@@ -1,5 +1,11 @@
 /** """ Features """ section */
 /** These rules are shared by mobile, tablets & desktop */
+.features {
+  padding: 20px 25px 50px 40px;
+}
+.features h2 {
+  margin-left: -15px;
+}
 .features .item {
   margin-bottom: 20px;
   padding: 25px 30px 25px 50px;
