--- a/sass/features.sass
+++ b/sass/features.sass
@@ -2,13 +2,17 @@
 @import 'overall.scss'
 
 /** These rules are shared by mobile, tablets & desktop */
-.features .item
-  margin-bottom: 20px
-  padding: 25px 30px 25px 50px
-  background-color: $bg_light
-  box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09)
-  border-radius: 25px
-  font-family: $content_font
+.features
+    padding: 20px 25px 50px 40px
+    h2
+      margin-left: -15px
+    .item
+      margin-bottom: 20px
+      padding: 25px 30px 25px 50px
+      background-color: $bg_light
+      box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09)
+      border-radius: 25px
+      font-family: $content_font
 
 /* """ Features """ item circle */
 .item__circle
