--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -7,11 +7,15 @@
 /* General rules targeting mobile first */
 section.restaurants
   background-color: #F6F6F6
-  padding-top: 30px
+  padding: 30px 0 40px 0
   font-family: $content_font
-  .card
-    width: 100%
-    margin-bottom: 25px
+  h2
+    padding: 0 0 0 30px
+  .restaurant
+    padding: 0 30px 0 30px
+    .card
+      width: 100%
+      margin-bottom: 20px
     /* """ Restaurants """ cards  images integration */
     img
       width: 100%
@@ -55,10 +59,7 @@ section.restaurants
 /* Targets extra small screens */
 @media (max-width: 768px)
   .restaurant
-    width: 99%
     .card
-      width: 100%
-      margin: 0 auto 20px auto
       .new
         right: 40px
         margin: 20px 15px 15px 20px
