--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -5,12 +5,12 @@
  */
 @import 'overall.scss'
 footer
-  padding: 15px 0 15px 15px
+  padding: 15px 0 15px 30px
   background-color: #353535
   .footer
     &-title-h1
       color: white
-      font-family: 'Shrikhand'
+      font-family: $project_font
       font-size: 20px
       font-style: italic
     &-links-list-ul
@@ -18,7 +18,7 @@ footer
       padding: 0
     &-links-list-li
       color: #fff
-      font-family: 'Roboto'
+      font-family: $content_font
       margin-bottom: 10px
       font-weight: 500
     &-icon-i
