--- a/sass/header.sass
+++ b/sass/header.sass
@@ -36,9 +36,12 @@ section.head
       margin-right: 25px
     /* """ Reservez le menu qui vous convient */
     &__title
+
+      margin-top: 50px
       font-family: $content_font
       color: #222
     &-subtitle--p
+      margin: auto
       margin-top: 0
       font-weight: 300
       font-size: 18px
