--- a/sass/main.sass
+++ b/sass/main.sass
@@ -43,6 +43,11 @@ body
     margin-bottom: 0
     font-family: $content_font
 
+  @media (min-width: 1400px)
+    .mrg-auto-container
+      width: 80%
+      margin: auto
+
   /* """ Actions buttons */
   .action-button-container
     margin-bottom: 40px
