--- a/css/features.css
+++ b/css/features.css
@@ -4,11 +4,11 @@
   padding: 20px 25px 50px 40px;
 }
 .features h2 {
-  margin-left: -15px;
+  margin: 0 0 20px -15px;
 }
 .features .item {
   margin-bottom: 20px;
-  padding: 25px 30px 25px 50px;
+  padding: 25px 30px 25px 40px;
   background-color: #F6F6F6;
   box-shadow: 5px 11px 15px 5px rgba(0, 0, 0, 0.09);
   border-radius: 25px;
@@ -20,7 +20,7 @@
   position: absolute;
   width: 35px;
   height: 25px;
-  margin: 10px -70px;
+  margin: 10px -60px;
   padding-top: 10px;
   border-radius: 35px;
   background-color: #9356DC;
@@ -86,19 +86,22 @@
 }
 /* Targets extra-large screens */
 @media (min-width: 1400px) {
-  .features h2 {
-    width: 100%;
-  }
   .features .features-container {
+    width: 90%;
     display: flex;
-    width: 100%;
-    margin-left: 25px;
+    justify-content: space-between;
+    margin: 25px auto auto auto;
   }
   .features .item {
-    width: 25%;
+    display: flex;
   }
   .features .item:not(:last-of-type) {
-    margin-right: 40px;
+    margin-right: 60px;
+  }
+  .features h2 {
+    width: 100%;
+    text-align: center;
+    margin: 35px auto 50px auto;
   }
 }
 
