--- a/css/restaurants_list.css
+++ b/css/restaurants_list.css
@@ -73,7 +73,7 @@ section.restaurants .restaurant p {
   }
 }
 /* Targets small screens */
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 768px) and (max-width: 991px) {
   section.restaurants {
     /* """ Restaurants """ card element */
   }
@@ -82,82 +82,65 @@ section.restaurants .restaurant p {
     padding: 5px 8px 5px 8px;
   }
 }
-/* Targets tablets */
-@media (min-width: 992px) and (max-width: 1200px) {
-  section.restaurants {
-    width: 100%;
-  }
+/* Targets tablets & desktops */
+@media (min-width: 992px) {
   section.restaurants .restaurants-container {
     display: flex;
+    margin: auto;
     flex-wrap: wrap;
-    padding-left: 15px;
+    width: 95%;
+    padding: 15px 30px 0 30px;
   }
   section.restaurants .restaurants-container h2 {
+    padding: 0;
     width: 100%;
+    margin-right: 1%;
   }
   section.restaurants .restaurants-container .restaurant {
-    width: 48.5%;
+    padding: 0;
+    width: 49%;
   }
-  section.restaurants .restaurants-container .card {
+  section.restaurants .restaurants-container .restaurant .card {
     width: 100%;
     margin-bottom: 30px;
   }
-  section.restaurants .restaurants-container .card img {
-    height: 300px;
-  }
-  section.restaurants .restaurants-container .card .new {
-    margin: 20px -20px 15px 20px;
+  section.restaurants .restaurants-container .restaurant .card .new {
+    margin: 20px -20px 15px 25px;
     padding: 5px 8px 5px 8px;
   }
-}
-/* Targets large screens */
-@media (min-width: 1200px) and (max-width: 1400px) {
-  section.restaurants .restaurants-container {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 15px;
-    width: 100%;
-  }
-  section.restaurants .restaurants-container .restaurant {
-    width: 48.5%;
-  }
-  section.restaurants .restaurants-container .restaurant-mrg {
-    margin-right: 10px;
-  }
-  section.restaurants .restaurants-container h2 {
-    width: 100%;
-  }
-  section.restaurants .restaurants-container .card img {
+  section.restaurants .restaurants-container .restaurant .card img {
     height: 300px;
   }
-  section.restaurants .new {
-    margin-left: 15px;
+  section.restaurants .restaurants-container .restaurant:nth-of-type(1) {
+    margin-right: 1.5%;
+  }
+  section.restaurants .restaurants-container .restaurant:nth-of-type(3) {
+    margin-right: 1.5%;
   }
 }
 /* Targets extra-large screens */
 @media (min-width: 1400px) {
+  section.restaurants h2 {
+    width: 100%;
+    text-align: center;
+    margin: 35px 0 35px 0;
+    padding: 0;
+  }
   section.restaurants .restaurants-container {
     display: flex;
-    flex-wrap: nowrap;
-    width: 98%;
+    align-items: center;
   }
-  section.restaurants .restaurants-container .restaurant {
-    width: 30%;
-    margin-right: 15px;
+  section.restaurants .restaurant {
+    padding: 0;
+    width: 49%;
   }
-  section.restaurants .restaurants-container:first-of-type {
-    margin-left: 25px;
-  }
-  section.restaurants .restaurants-container-mrg {
-    margin-right: 0px;
-  }
-  section.restaurants .restaurants-container h2 {
+  section.restaurants .restaurant .card {
     width: 100%;
   }
-  section.restaurants .restaurants-container .card img {
+  section.restaurants .restaurant .card img {
     height: 300px;
   }
-  section.restaurants .new {
+  section.restaurants .restaurant .card .new {
     margin-left: 15px;
   }
 }
