--- a/sass/features.sass
+++ b/sass/features.sass
@@ -5,10 +5,10 @@
 .features
     padding: 20px 25px 50px 40px
     h2
-      margin-left: -15px
+      margin: 0 0 20px -15px
     .item
       margin-bottom: 20px
-      padding: 25px 30px 25px 50px
+      padding: 25px 30px 25px 40px
       background-color: $bg_light
       box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09)
       border-radius: 25px
@@ -19,7 +19,7 @@
   position: absolute
   width: 35px
   height: 25px
-  margin: 10px -70px
+  margin: 10px -60px
   padding-top: 10px
   border-radius: 35px
   background-color: $feat_circle_bg
@@ -78,13 +78,16 @@
 /* Targets extra-large screens */
 @media(min-width: 1400px)
   .features
+    .features-container
+      width: 90%
+      display: flex
+      justify-content: space-between
+      margin: 25px auto auto auto
+    .item
+      display: flex
+      &:not(:last-of-type)
+        margin-right: 60px
     h2
       width: 100%
-    .features-container
-      display: flex
-      width: 100%
-      margin-left: 25px
-    .item
-      width: 25%
-      &:not(:last-of-type)
-        margin-right: 40px
+      text-align: center
+      margin: 35px auto 50px auto
