--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -66,7 +66,7 @@ section.restaurants
         padding: 5px 8px 5px 8px
 
 /* Targets small screens */
-@media (min-width: 768px) and (max-width: 992px)
+@media (min-width: 768px) and (max-width: 991px)
   section.restaurants
     /* """ Restaurants """ card element */
     .restaurant
@@ -75,63 +75,52 @@ section.restaurants
           margin: 20px 30px 15px 20px
           padding: 5px 8px 5px 8px
 
-/* Targets tablets */
-@media(min-width: 992px) and (max-width: 1200px)
-  section.restaurants
-    width: 100%
-    .restaurants-container
-      display: flex
-      flex-wrap: wrap
-      padding-left: 15px
-      h2
-        width: 100%
-      .restaurant
-        width: 48.5%
-      .card
-        width: 100%
-        margin-bottom: 30px
-        img
-          height: 300px
-        .new
-          margin: 20px -20px 15px 20px
-          padding: 5px 8px 5px 8px
-
-/* Targets large screens */
-@media(min-width: 1200px) and (max-width: 1400px)
+/* Targets tablets & desktops */
+@media(min-width: 992px)
   section.restaurants
     .restaurants-container
       display: flex
+      margin: auto
       flex-wrap: wrap
-      padding-left: 15px
-      width: 100%
-      .restaurant
-        width: 48.5%
-        &-mrg
-          margin-right: 10px
+      width: 95%
+      padding: 15px 30px 0 30px
       h2
+        padding: 0
         width: 100%
-      .card img
-        height: 300px
-    .new
-      margin-left: 15px
+        margin-right: 1%
+      .restaurant
+        padding: 0
+        width: 49%
+        .card
+          width: 100%
+          margin-bottom: 30px
+          .new
+            margin: 20px -20px 15px 25px
+            padding: 5px 8px 5px 8px
+          img
+            height: 300px
+        &:nth-of-type(1)
+          margin-right: 1.5%
+        &:nth-of-type(3)
+          margin-right: 1.5%
 
 /* Targets extra-large screens */
 @media(min-width: 1400px)
   section.restaurants
+    h2
+     width: 100%
+     text-align: center
+     margin: 35px 0 35px 0
+     padding: 0
     .restaurants-container
       display: flex
-      flex-wrap: nowrap
-      width: 98%
-      .restaurant
-        width: 30%
-        margin-right: 15px
-      &:first-of-type
-        margin-left: 25px
-      &-mrg
-        margin-right: 0px
-      h2
+      align-items: center
+    .restaurant
+      padding: 0
+      width: 49%
+      .card
         width: 100%
-      .card img
-        height: 300px
-    .new
-      margin-left: 15px
+        img
+         height: 300px
+        .new
+          margin-left: 15px
