--- a/sass/features.sass
+++ b/sass/features.sass
@@ -84,7 +84,8 @@
       justify-content: space-between
       margin: 25px auto auto auto
     .item
-      display: flex
+      width: 25%
+      text-align: center
       &:not(:last-of-type)
         margin-right: 60px
     h2
