:refactor: all menu pages have been refactored to a better view on desktop

--- a/css/header.css
+++ b/css/header.css
@@ -4,11 +4,12 @@
  * */
 /* Pages header first target mobile, see the media query below */
 header {
+  background: #fff;
   width: 100%;
   text-align: center;
   position: relative;
+  z-index: 1;
   box-shadow: 5px 16px 15px -10px rgba(0, 0, 0, 0.15);
-  z-index: 98;
 }
 header .header__img {
   margin: 25px 0 15px 0;
@@ -41,16 +42,11 @@ section.head .head-location-i {
   margin-right: 25px;
 }
 section.head .head__title {
-  display: block;
-  width: 90%;
-  margin: auto;
   margin-top: 50px;
   font-family: "Roboto";
   color: #222;
 }
 section.head .head-subtitle--p {
-  display: block;
-  width: 90%;
   margin: auto;
   margin-top: 0;
   font-weight: 300;
