--- a/sass/header.sass
+++ b/sass/header.sass
@@ -7,11 +7,12 @@
 
 /* Pages header first target mobile, see the media query below */
 header
+  background: #fff
   width: 100%
   text-align: center
   position: relative
+  z-index: 1
   box-shadow: 5px 16px 15px -10px rgba(0,0,0,0.15)
-  z-index: 98
   .header__img
     margin: 25px 0 15px 0
     width: 30%
