--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -39,6 +39,9 @@
 section.menu {
   width: 100%;
 }
+section.menu .overall-restaurant-pres-margin {
+  margin-left: 25px;
+}
 section.menu .menu-card__img {
   width: 100%;
   height: 300px;
@@ -47,10 +50,11 @@ section.menu .menu-card__img {
 section.menu .menu-container {
   width: 100%;
   position: relative;
-  z-index: 1;
-  padding-bottom: 30px;
+  margin-top: -30px;
+  padding-bottom: 60px;
   background-color: #F1F1F1;
-  border-radius: 25px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
   box-shadow: 5px -5px 15px -5px rgba(0, 0, 0, 0.2);
 }
 section.menu .menu-container .menu-card__title-container {
@@ -102,6 +106,9 @@ section.menu .menu-item:nth-of-type(2) {
 }
 section.menu .menu-item:nth-of-type(3) {
   animation-delay: 0.75s;
+}
+section.menu .menu-item:nth-of-type(4) {
+  animation-delay: 1s;
 }
 section.menu .menu-item__title {
   display: flex;
@@ -157,6 +164,10 @@ section.menu .menu-item:hover .menu-item__icon {
 }
 section.menu .menu-item:hover .menu-item__icon i {
   animation: selected 0.5s forwards, selectedend 0.5s forwards;
+}
+
+.action-button-container {
+  margin-top: 50px;
 }
 
 @media (min-width: 1200px) {
