--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -66,7 +66,7 @@ section.restaurants
         padding: 5px 8px 5px 8px
 
 /* Targets small screens */
-@media (min-width: 768px) and (max-width: 991px)
+@media (min-width: 768px) and (max-width: 992px)
   section.restaurants
     /* """ Restaurants """ card element */
     .restaurant
@@ -104,8 +104,10 @@ section.restaurants
         &:nth-of-type(3)
           margin-right: 1.5%
 
-/* Targets extra-large screens */
-@media(min-width: 1400px)
+/* Targets large screens */
+@media(min-width: 1200px)
+  header
+    position: fixed
   section.restaurants
     h2
      width: 100%
