--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -34,6 +34,9 @@
 section.menu
   width: 100%
 
+  .overall-restaurant-pres-margin
+    margin-left: 25px
+
   .menu-card__img
     width: 100%
     height: 300px
@@ -42,10 +45,11 @@ section.menu
   .menu-container
     width: 100%
     position: relative
-    z-index: 1
-    padding-bottom: 30px
+    margin-top: -30px
+    padding-bottom: 60px
     background-color: #F1F1F1
-    border-radius: 25px
+    border-top-left-radius: 25px
+    border-top-right-radius: 25px
     box-shadow: 5px -5px 15px -5px rgba(0,0,0,0.2)
 
     .menu-card
@@ -91,6 +95,8 @@ section.menu
       animation-delay: 0.5s
     &:nth-of-type(3)
       animation-delay: 0.75s
+    &:nth-of-type(4)
+      animation-delay: 1s
 
     &__title
       display: flex
@@ -139,6 +145,8 @@ section.menu
     &:hover .menu-item__icon i
       animation: selected 0.5s forwards, selectedend 0.5s forwards
 
+.action-button-container
+    margin-top: 50px
 
 @media (min-width: 1200px)
   .container-d-flex
