--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -9,7 +9,13 @@
   from
     width: 0%
   to
-    width: 15%
+    width: 20%
+
+@keyframes growReverse
+  from
+    width: 20%
+  to
+    width: 0%
 
 @keyframes selected
   from
@@ -17,19 +23,19 @@
   to
     transform: rotate(360deg)
 
-@keyframes selectedend
+@keyframes selecteEnd
   from
     transform: rotate(360deg)
   to
     transform: rotate(0deg)
 
-@keyframes slideup
+@keyframes slideUp
   from
-    opacity: 0
-    transform: translatey(-30px)
+    transform: translatey(20px)
+    opacity: 0%
   to
-    opacity: 1
     transform: translatey(0px)
+    opacity: 100%
 
 section.menu
   width: 100%
@@ -87,16 +93,17 @@ section.menu
     margin: 30px 20px 30px 20px
     padding: 5px
     font-family: $content-font
-    animation: slideup 0.25s forwards
+    animation: slideUp 1s forwards
     opacity: 0
     &:nth-of-type(1)
-      animation-delay: 0.25s
+      animation-delay: calc(1s / 4)
     &:nth-of-type(2)
-      animation-delay: 0.5s
+      animation-delay: calc(2s / 4)
     &:nth-of-type(3)
-      animation-delay: 0.75s
+      animation-delay: calc(3s / 4)
     &:nth-of-type(4)
-      animation-delay: 1s
+      animation-delay: calc(4s / 4)
+
 
     &__title
       display: flex
@@ -114,21 +121,27 @@ section.menu
       flex-direction: column
       justify-content: flex-end
       text-align: right
-      padding-right: 10px
+      margin-right: 25px
       padding-bottom: 10px
     &__icon
-      width: 0%
-      display: none
+      animation: growReverse 0.5s forwards
+      transition: all .2s ease-in-out
+      display: flex
       flex-direction: column
       justify-content: center
+      text-align: center
       background-color: #99E2D0
+      padding-top: 5px
       text-align: center
       margin: -5px
       border-radius: 0 20px 20px 0
+      cursor: pointer
       i
+        visibility: hidden
+        transition: all .2s ease-in-out
         color: #fff
         font-size: 25px
-
+        
     &:hover .menu-item__title
       white-space: nowrap
       text-overflow: ellipsis
@@ -141,9 +154,11 @@ section.menu
       padding-right: 20px
     &:hover .menu-item__icon
       display: flex
-      animation: grow 0.3s forwards
+      animation: grow 0.5s forwards
     &:hover .menu-item__icon i
-      animation: selected 0.5s forwards, selectedend 0.5s forwards
+      visibility: visible
+      animation: selected 1s forwards, selectedEnd 1s forwards
+
 
 .action-button-container
     margin-top: 50px
