--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -2,6 +2,7 @@
  * * Overall restaurant menu container
  * *
  * */
+/* Make the " check icon " area to appear */
 @keyframes grow {
   from {
     width: 0%;
@@ -10,6 +11,7 @@
     width: 20%;
   }
 }
+/* Make the " check icon " area to disapper */
 @keyframes growReverse {
   from {
     width: 20%;
@@ -18,6 +20,7 @@
     width: 0%;
   }
 }
+/* Make the check icon rotate */
 @keyframes selected {
   from {
     transform: rotate(0deg);
@@ -34,6 +37,7 @@
     transform: rotate(0deg);
   }
 }
+/* Make the menu items to appear in a slide & fade in effect */
 @keyframes slideUp {
   from {
     transform: translatey(20px);
@@ -44,16 +48,15 @@
     opacity: 100%;
   }
 }
+/* Menu overall header */
 section.menu {
   width: 100%;
+  /* Menu heading container */
+  /* Menu presentation heading image */
+  /* Menu card container */
 }
 section.menu .overall-restaurant-pres-margin {
   margin-left: 25px;
-}
-section.menu .menu-card__img {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
 }
 section.menu .menu-container {
   width: 100%;
@@ -65,17 +68,22 @@ section.menu .menu-container {
   border-top-right-radius: 25px;
   box-shadow: 5px -5px 15px -5px rgba(0, 0, 0, 0.2);
 }
-section.menu .menu-container .menu-card__title-container {
+section.menu .menu-card-img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+section.menu .menu-card__title-container {
   display: flex;
   padding-top: 20px;
 }
-section.menu .menu-container .menu-card__title {
+section.menu .menu-card__title {
   padding-left: 20px;
   font-family: "Shrikhand";
   font-size: 30px;
   flex: 1;
 }
-section.menu .menu-container .menu-card__heart-icon {
+section.menu .menu-card__heart-icon {
   margin-right: 40px;
   align-self: center;
   font-size: 30px;
@@ -89,15 +97,6 @@ section.menu .category__line {
   height: 3px;
   margin: 10px 0 -10px;
   background-color: #92E2D0;
-}
-section.menu .card--restaurant-pdg {
-  padding: 15px;
-}
-section.menu .card--restaurant-mrg-btm {
-  margin-bottom: 40px;
-}
-section.menu .restaurants-cards-margin {
-  margin-bottom: 5px;
 }
 section.menu .menu-item {
   margin: 30px 20px 30px 20px;
