--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -5,30 +5,33 @@
  */
 @import 'overall.scss'
 
+/* Make the " check icon " area to appear */
 @keyframes grow
   from
     width: 0%
   to
     width: 20%
 
+/* Make the " check icon " area to disapper */
 @keyframes growReverse
   from
     width: 20%
   to
     width: 0%
 
+/* Make the check icon rotate */
 @keyframes selected
   from
     transform: rotate(0deg)
   to
     transform: rotate(360deg)
-
 @keyframes selecteEnd
   from
     transform: rotate(360deg)
   to
     transform: rotate(0deg)
 
+/* Make the menu items to appear in a slide & fade in effect */
 @keyframes slideUp
   from
     transform: translatey(20px)
@@ -37,17 +40,14 @@
     transform: translatey(0px)
     opacity: 100%
 
+/* Menu overall header */
 section.menu
   width: 100%
 
   .overall-restaurant-pres-margin
     margin-left: 25px
 
-  .menu-card__img
-    width: 100%
-    height: 300px
-    object-fit: cover
-
+  /* Menu heading container */
   .menu-container
     width: 100%
     position: relative
@@ -58,36 +58,37 @@ section.menu
     border-top-right-radius: 25px
     box-shadow: 5px -5px 15px -5px rgba(0,0,0,0.2)
 
-    .menu-card
-      &__title-container
-        display: flex
-        padding-top: 20px
+  /* Menu presentation heading image */
+  .menu-card-img
+    width: 100%
+    height: 300px
+    object-fit: cover
 
-      &__title
-        padding-left: 20px
-        font-family: $project_font
-        font-size: 30px
-        flex: 1
-      &__heart-icon
-        margin-right: 40px
-        align-self: center
-        font-size: 30px
+  /* Menu card container */
+  .menu-card
+    &__title-container
+      display: flex
+      padding-top: 20px
+    &__title
+      padding-left: 20px
+      font-family: $project_font
+      font-size: 30px
+      flex: 1
+    &__heart-icon
+      margin-right: 40px
+      align-self: center
+      font-size: 30px
+
+
 
   .category
     font-family: $content_font
     text-transform: uppercase
-  .category__line
-    width: 40px
-    height: 3px
-    margin: 10px 0 -10px
-    background-color: #92E2D0
-
-  .card--restaurant-pdg
-    padding: 15px
-  .card--restaurant-mrg-btm
-    margin-bottom: 40px
-  .restaurants-cards-margin
-    margin-bottom: 5px
+    &__line
+      width: 40px
+      height: 3px
+      margin: 10px 0 -10px
+      background-color: #92E2D0
 
   .menu-item
     margin: 30px 20px 30px 20px
@@ -141,7 +142,7 @@ section.menu
         transition: all .2s ease-in-out
         color: #fff
         font-size: 25px
-        
+
     &:hover .menu-item__title
       white-space: nowrap
       text-overflow: ellipsis
