:feat: compressed css files

--- a/css/features.css
+++ b/css/features.css
@@ -1,109 +1,1 @@
-/** """ Features """ section */
-/** These rules are shared by mobile, tablets & desktop */
-.features {
-  padding: 20px 25px 50px 40px;
-}
-.features h2 {
-  margin: 0 0 20px -15px;
-}
-.features .item {
-  margin-bottom: 20px;
-  padding: 25px 30px 25px 40px;
-  background-color: #F6F6F6;
-  box-shadow: 5px 11px 15px 5px rgba(0, 0, 0, 0.09);
-  border-radius: 25px;
-  font-family: "Roboto";
-}
-
-/* """ Features """ item circle */
-.item__circle {
-  position: absolute;
-  width: 35px;
-  height: 25px;
-  margin: 10px -60px;
-  padding-top: 10px;
-  border-radius: 35px;
-  background-color: #9356DC;
-  font-family: "Roboto";
-  font-weight: 600;
-  color: #fff;
-  text-align: center;
-}
-
-/* """ Features """ card title */
-.item__description {
-  font-size: 18px;
-  font-weight: 600;
-}
-
-/* """ Features """ card title icon */
-.item__icon {
-  color: #7E7E7E;
-  font-weight: 600;
-  margin-right: 20px;
-}
-
-/* Targets small screens */
-@media (min-width: 768px) and (max-width: 992px) {
-  .features .item {
-    margin-left: 20px;
-  }
-  .features .item .item {
-    width: 85%;
-  }
-}
-/* Targets tablets */
-@media (min-width: 992px) and (max-width: 1200px) {
-  .features h2 {
-    width: 100%;
-  }
-  .features .features-container {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .features .features-container .item {
-    width: 100%;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-}
-/* Targets large screens */
-@media (min-width: 1200px) and (max-width: 1400px) {
-  .features h2 {
-    width: 100%;
-  }
-  .features .features-container {
-    display: flex;
-    width: 100%;
-    margin-left: 25px;
-  }
-  .features .item {
-    width: 33%;
-    margin-right: 40px;
-  }
-}
-/* Targets extra-large screens */
-@media (min-width: 1400px) {
-  .features .features-container {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    margin: 25px auto auto auto;
-  }
-  .features .item {
-    width: 25%;
-    text-align: center;
-  }
-  .features .item:not(:last-of-type) {
-    margin-right: 60px;
-  }
-  .features h2 {
-    width: 100%;
-    text-align: center;
-    margin: 35px auto 50px auto;
-  }
-}
-
-/*# sourceMappingURL=features.css.map */
+.features{padding:20px 25px 50px 40px}.features h2{margin:0 0 20px -15px}.features .item{margin-bottom:20px;padding:25px 30px 25px 40px;background-color:#f6f6f6;box-shadow:5px 11px 15px 5px rgba(0,0,0,.09);border-radius:25px;font-family:"Roboto"}.item__circle{position:absolute;width:35px;height:25px;margin:10px -60px;padding-top:10px;border-radius:35px;background-color:#9356dc;font-family:"Roboto";font-weight:600;color:#fff;text-align:center}.item__description{font-size:18px;font-weight:600}.item__icon{color:#7e7e7e;font-weight:600;margin-right:20px}@media(min-width: 768px)and (max-width: 992px){.features .item{margin-left:20px}.features .item .item{width:85%}}@media(min-width: 992px)and (max-width: 1200px){.features h2{width:100%}.features .features-container{width:100%;margin:auto;display:flex;flex-wrap:wrap}.features .features-container .item{width:100%;margin-bottom:30px;text-align:center}}@media(min-width: 1200px)and (max-width: 1400px){.features h2{width:100%}.features .features-container{display:flex;width:100%;margin-left:25px}.features .item{width:33%;margin-right:40px}}@media(min-width: 1400px){.features .features-container{width:90%;display:flex;justify-content:space-between;margin:25px auto auto auto}.features .item{width:25%;text-align:center}.features .item:not(:last-of-type){margin-right:60px}.features h2{width:100%;text-align:center;margin:35px auto 50px auto}}/*# sourceMappingURL=features.css.map */
