--- a/css/main.css
+++ b/css/main.css
@@ -1,79 +1,1 @@
-body {
-  overflow-x: hidden;
-  /** Text rules */
-  /** Backgrounds helpers */
-  /** Pages sections titles */
-  /** Cards general rules **/
-  /* """ Actions buttons */
-}
-body .mrg-top-none {
-  margin-top: 0;
-}
-body .d-flex {
-  display: flex;
-}
-body p {
-  font-family: "Roboto";
-}
-body .text-medium {
-  font-weight: 700;
-}
-body a.link-black {
-  color: black;
-}
-body a.no-decoration {
-  text-decoration: none;
-}
-body .bg-light {
-  background-color: #EAEAEA;
-}
-body .bg-light-alt {
-  background-color: #F6F6F6;
-}
-body .overall-section-titles {
-  margin-left: 0;
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 25px;
-}
-body .card {
-  background-color: #fff;
-  border-radius: 20px;
-  box-shadow: 5px 11px 15px 5px rgba(0, 0, 0, 0.09);
-}
-body .card-title {
-  margin-bottom: 0;
-  font-family: "Roboto";
-}
-@media (min-width: 1400px) {
-  body .mrg-auto-container {
-    width: 80%;
-    margin: auto;
-  }
-}
-body .action-button-container {
-  margin-bottom: 40px;
-  text-align: center;
-}
-body .action-button-container-a {
-  width: 250px;
-  margin: auto;
-  display: block;
-  padding: 20px 0 20px 0;
-  margin-bottom: 30px;
-  background: rgb(147, 86, 220);
-  background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 100%);
-  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.25);
-  border-radius: 40px;
-  font-family: "Roboto";
-  font-weight: 700;
-  color: #FFF;
-  cursor: pointer;
-}
-body .action-button-container-a:hover {
-  cursor: pointer;
-  background: linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 80%);
-  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.35);
-}
-
-/*# sourceMappingURL=main.css.map */
+body{overflow-x:hidden}body .mrg-top-none{margin-top:0}body .d-flex{display:flex}body p{font-family:"Roboto"}body .text-medium{font-weight:700}body a.link-black{color:#000}body a.no-decoration{text-decoration:none}body .bg-light{background-color:#eaeaea}body .bg-light-alt{background-color:#f6f6f6}body .overall-section-titles{margin-left:0;font-family:"Roboto";font-weight:700;font-size:25px}body .card{background-color:#fff;border-radius:20px;box-shadow:5px 11px 15px 5px rgba(0,0,0,.09)}body .card-title{margin-bottom:0;font-family:"Roboto"}@media(min-width: 1400px){body .mrg-auto-container{width:80%;margin:auto}}body .action-button-container{margin-bottom:40px;text-align:center}body .action-button-container-a{width:250px;margin:auto;display:block;padding:20px 0 20px 0;margin-bottom:30px;background:#9356dc;background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 100%);box-shadow:5px 5px 15px 5px rgba(0,0,0,.25);border-radius:40px;font-family:"Roboto";font-weight:700;color:#fff;cursor:pointer}body .action-button-container-a:hover{cursor:pointer;background:linear-gradient(0deg, rgb(147, 86, 220) 24%, rgb(255, 121, 218) 80%);box-shadow:5px 5px 15px 5px rgba(0,0,0,.35)}/*# sourceMappingURL=main.css.map */
