--- a/css/restaurants_list.css
+++ b/css/restaurants_list.css
@@ -1,151 +1,1 @@
-/* *
- * * Homepage restaurant list
- * *
- * */
-/* General rules targeting mobile first */
-section.restaurants {
-  background-color: #F6F6F6;
-  padding: 30px 0 40px 0;
-  font-family: "Roboto";
-}
-section.restaurants h2 {
-  padding: 0 0 0 30px;
-}
-section.restaurants .restaurant {
-  padding: 0 30px 0 30px;
-  /* """ Restaurants """ cards  images integration */
-  /* """ Restaurants cards content is a flex line */
-  /* Card title */
-  /* Card paragraphs */
-}
-section.restaurants .restaurant .card {
-  width: 100%;
-  margin-bottom: 20px;
-}
-section.restaurants .restaurant img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 25px 25px 0 0;
-}
-section.restaurants .restaurant .flex {
-  display: flex;
-}
-section.restaurants .restaurant .flex div:first-of-type {
-  flex: 1;
-}
-section.restaurants .restaurant .flex div:last-of-type {
-  margin: 25px 25px 0 0;
-  font-size: 20px;
-  /* """ Nouveau """ label */
-}
-section.restaurants .restaurant .new {
-  position: absolute;
-  margin-top: 20px;
-  padding: 5px 8px 5px 8px;
-  background-color: #99E2D0;
-  font-family: "Roboto";
-  font-weight: 500;
-  color: #2DA285;
-}
-section.restaurants .restaurant h3 {
-  font-family: "Roboto";
-  font-size: 18px;
-  margin-bottom: 0px;
-  font-weight: 700;
-  margin-left: 15px;
-}
-section.restaurants .restaurant p {
-  margin-left: 15px;
-  margin-top: 5px;
-  padding-bottom: 0px;
-  font-family: "Roboto";
-  font-size: 15px;
-  color: #555;
-}
-
-/* Targets extra small screens */
-@media (max-width: 768px) {
-  .restaurant .card .new {
-    right: 40px;
-    margin: 20px 15px 15px 20px;
-    padding: 5px 8px 5px 8px;
-  }
-}
-/* Targets small screens */
-@media (min-width: 768px) and (max-width: 992px) {
-  section.restaurants {
-    /* """ Restaurants """ card element */
-  }
-  section.restaurants .restaurant .card .new {
-    margin: 20px 30px 15px 20px;
-    padding: 5px 8px 5px 8px;
-  }
-}
-/* Targets tablets & desktops */
-@media (min-width: 992px) {
-  section.restaurants .restaurants-container {
-    display: flex;
-    margin: auto;
-    flex-wrap: wrap;
-    width: 95%;
-    padding: 15px 30px 0 30px;
-  }
-  section.restaurants .restaurants-container h2 {
-    padding: 0;
-    width: 100%;
-    margin-right: 1%;
-  }
-  section.restaurants .restaurants-container .restaurant {
-    padding: 0;
-    width: 49%;
-  }
-  section.restaurants .restaurants-container .restaurant .card {
-    width: 100%;
-    margin-bottom: 30px;
-  }
-  section.restaurants .restaurants-container .restaurant .card .new {
-    margin: 20px -20px 15px 25px;
-    padding: 5px 8px 5px 8px;
-  }
-  section.restaurants .restaurants-container .restaurant .card img {
-    height: 300px;
-  }
-  section.restaurants .restaurants-container .restaurant:nth-of-type(1) {
-    margin-right: 1.5%;
-  }
-  section.restaurants .restaurants-container .restaurant:nth-of-type(3) {
-    margin-right: 1.5%;
-  }
-}
-/* Targets large screens */
-@media (min-width: 1200px) {
-  header {
-    position: fixed;
-  }
-  section.restaurants h2 {
-    width: 100%;
-    text-align: center;
-    margin: 35px 0 35px 0;
-    padding: 0;
-  }
-  section.restaurants .restaurants-container {
-    display: flex;
-    align-items: center;
-  }
-  section.restaurants .restaurant {
-    padding: 0;
-    width: 49%;
-  }
-  section.restaurants .restaurant .card {
-    width: 100%;
-  }
-  section.restaurants .restaurant .card img {
-    height: 300px;
-  }
-  section.restaurants .restaurant .card .new {
-    margin-left: 15px;
-  }
-}
-
-/*# sourceMappingURL=restaurants_list.css.map */
+section.restaurants{background-color:#f6f6f6;padding:30px 0 40px 0;font-family:"Roboto"}section.restaurants h2{padding:0 0 0 30px}section.restaurants .restaurant{padding:0 30px 0 30px}section.restaurants .restaurant .card{width:100%;margin-bottom:20px}section.restaurants .restaurant img{width:100%;height:200px;object-fit:cover;border-radius:25px 25px 0 0}section.restaurants .restaurant .flex{display:flex}section.restaurants .restaurant .flex div:first-of-type{flex:1}section.restaurants .restaurant .flex div:last-of-type{margin:25px 25px 0 0;font-size:20px}section.restaurants .restaurant .new{position:absolute;margin-top:20px;padding:5px 8px 5px 8px;background-color:#99e2d0;font-family:"Roboto";font-weight:500;color:#2da285}section.restaurants .restaurant h3{font-family:"Roboto";font-size:18px;margin-bottom:0px;font-weight:700;margin-left:15px}section.restaurants .restaurant p{margin-left:15px;margin-top:5px;padding-bottom:0px;font-family:"Roboto";font-size:15px;color:#555}@media(max-width: 768px){.restaurant .card .new{right:40px;margin:20px 15px 15px 20px;padding:5px 8px 5px 8px}}@media(min-width: 768px)and (max-width: 992px){section.restaurants .restaurant .card .new{margin:20px 30px 15px 20px;padding:5px 8px 5px 8px}}@media(min-width: 992px){section.restaurants .restaurants-container{display:flex;margin:auto;flex-wrap:wrap;width:95%;padding:15px 30px 0 30px}section.restaurants .restaurants-container h2{padding:0;width:100%;margin-right:1%}section.restaurants .restaurants-container .restaurant{padding:0;width:49%}section.restaurants .restaurants-container .restaurant .card{width:100%;margin-bottom:30px}section.restaurants .restaurants-container .restaurant .card .new{margin:20px -20px 15px 25px;padding:5px 8px 5px 8px}section.restaurants .restaurants-container .restaurant .card img{height:300px}section.restaurants .restaurants-container .restaurant:nth-of-type(1){margin-right:1.5%}section.restaurants .restaurants-container .restaurant:nth-of-type(3){margin-right:1.5%}}@media(min-width: 1200px){header{position:fixed}section.restaurants h2{width:100%;text-align:center;margin:35px 0 35px 0;padding:0}section.restaurants .restaurants-container{display:flex;align-items:center}section.restaurants .restaurant{padding:0;width:49%}section.restaurants .restaurant .card{width:100%}section.restaurants .restaurant .card img{height:300px}section.restaurants .restaurant .card .new{margin-left:15px}}/*# sourceMappingURL=restaurants_list.css.map */
