:feat: adding mailto on footer contact item

--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -21,5 +21,8 @@ footer
       font-family: $content_font
       margin-bottom: 10px
       font-weight: 500
+      a
+        color: #fff
+        text-decoration: none 
     &-icon-i
       margin-right: 10px
