--- a/css/footer.css
+++ b/css/footer.css
@@ -1,1 +1,33 @@
-footer{padding:15px 0 15px 30px;background-color:#353535}footer .footer-title-h1{color:#fff;font-family:"Shrikhand";font-size:20px;font-style:italic}footer .footer-links-list-ul{list-style-type:none;padding:0}footer .footer-links-list-li{color:#fff;font-family:"Roboto";margin-bottom:10px;font-weight:500}footer .footer-icon-i{margin-right:10px}/*# sourceMappingURL=footer.css.map */
+/* *
+ * * Overall footer
+ * *
+ * */
+footer {
+  padding: 15px 0 15px 30px;
+  background-color: #353535;
+}
+footer .footer-title-h1 {
+  color: white;
+  font-family: "Shrikhand";
+  font-size: 20px;
+  font-style: italic;
+}
+footer .footer-links-list-ul {
+  list-style-type: none;
+  padding: 0;
+}
+footer .footer-links-list-li {
+  color: #fff;
+  font-family: "Roboto";
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+footer .footer-links-list-li a {
+  color: #fff;
+  text-decoration: none;
+}
+footer .footer-icon-i {
+  margin-right: 10px;
+}
+
+/*# sourceMappingURL=footer.css.map */
